--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                     <div class="d-1-image">
                         <img src="./images/84.jpg" alt="Prefeito">
                         Prefeito
-                    </div><div class="d-1-image small">
+                    </div>
+                    <div class="d-1-image small">
                         <img src="./images/84_2.jpg" alt="Vice-Prefeito">
                         Vice-Prefeito
                     </div>
